themes/mrjaamo-theme/static/css/style.css
/*************** RESET *************/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/*************** /RESET *************/

:root {
  --color-light-gray: #f9f9fb;
  --color-gray: #70747f;
  --color-orange: #d97b3f;
  --easing-easeoutcirc: cubic-bezier(0, 0.55, 0.45, 1);
}

body {
  font-family: Helvetica, Arial;
  color: #252528;
}

a {
  text-decoration: none;
  color: var(--color-orange);
}

a:hover,
a:active {
  text-decoration: underline;
}

ol {
  list-style-type: decimal-leading-zero;
  margin-left: 27px;
}

ol li {
  font-family: georgia, times;
  line-height: 180%;
  margin-bottom: 1.4rem;
}

ol li::marker {
  font-weight: 700;
}

img.lazy-load {
  opacity: 0;
  width: 1px;
  height: 1px;
}

header {
  background-color: #1a1919;
  min-height: 600px;
  position: relative;
}
header canvas {
  width: 100%;
  height: 100%;
  position: absolute;
}

header div {
  width: 100%;
  padding-top: 400px;
  text-align: center;
  position: absolute;
}

header h1 svg {
  width: 200px;
}

header h1 svg path {
  fill: white;
}

header p {
  margin-top: 5px;
  text-transform: uppercase;
  font-size: 0.8rem;
  color: white;
  opacity: 0.6;
}

article {
  max-width: 600px;
  margin: 0px auto 0px;
  padding-left: 80px;
  padding-right: 80px;
  padding-top: 80px;
  padding-bottom: 80px;
  border-bottom: 1px solid #dddddd;
  overflow: hidden;
  position: relative;
  opacity: 0;
  transform: translatey(30px);
  transition: all 1s var(--easing-easeoutcirc);
  transition-delay: 0.5s;
  background: white;
}

@media screen and (max-width: 600px) {
  article {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 80px;
    padding-bottom: 80px;
  }
}

article.in-viewport,
article.single {
  opacity: 1;
  transform: translatey(0);
}

article:last-child {
  border-bottom: 0;
}

article:first-child {
  margin-top: -40px;
  border-radius: 4px;
}

article.with-image {
  background-color: #000000;
}

article img {
  margin-left: -80px;
}
article img.cover {
  position: absolute;
  object-fit: cover;
  object-position: center center;
  width: calc(100% + 160px);
  height: calc(100% + 160px);
  margin: -80px;
  opacity: 0.3;
}

.article-container {
  position: relative;
}

article h2 {
  font-size: 2rem;
  font-weight: 700;
  margin-top: 1.2rem;
  margin-bottom: 0.5rem;
  position: relative;
}

article h2 a {
  color: black;
}

article.with-image h2 {
  color: white;
}

article.single h2 {
  margin-bottom: 3rem;
}

time {
  color: var(--color-gray);
  text-transform: uppercase;
  font-size: 0.8rem;
  position: relative;
}

article p {
  font-family: georgia, times;
  line-height: 180%;
  position: relative;
}

article.single p {
  margin-bottom: 1.4rem;
}

article.with-image p {
  color: #c0c1c6;
}

.article-nav {
  margin-top: 0.4rem;
  display: flex;
  align-items: center;
  position: relative;
}

.article-nav a.read-more {
  line-height: 200%;
  color: #70747f;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 0.8rem;
  display: inline-block;
  margin-right: auto;
  background-image: linear-gradient(var(--color-orange), var(--color-orange));
  background-size: 0% 2px;
  background-position: 0 90%;
  background-repeat: no-repeat;
  transition: all 0.2s var(--easing-easeoutcirc);
}

.article-nav a.read-more:hover,
.article-nav a.read-more:active {
  color: var(--color-orange);
  background-size: 100% 2px;
}

.article-nav a.category {
  line-height: 240%;
  border: 1px solid #e2e2e2;
  background: transparent;
  border-radius: 3px;
  padding-left: 10px;
  padding-right: 10px;
  margin-left: 5px;
  color: var(--color-orange);
  text-transform: uppercase;
  font-size: 0.8rem;
  display: inline-block;
  background-image: linear-gradient(var(--color-orange), var(--color-orange));
  background-size: 0% 100%;
  background-repeat: no-repeat;
  transition: all 0.2s var(--easing-easeoutcirc);
}

.article-nav a.category:first-child {
  margin-left: 0;
}

.article-nav a.category:hover,
.article-nav a.category:active {
  background-size: 100% 100%;
  color: white;
}

.paginator {
  text-align: center;
  padding-top: 40px;
  padding-bottom: 40px;
  text-transform: uppercase;
  opacity: 0.6;
}

footer {
  background-color: var(--color-light-gray);
  text-align: center;
}

footer section {
  font-family: Georgia, "Times New Roman", Times, serif;
  line-height: 140%;
}

footer section.bio {
  max-width: 600px;
  margin: 0 auto 0;
  padding-top: 100px;
  padding-bottom: 100px;
  display: flex;
  align-items: center;
}

footer section.bio img {
  width: 120px;
  border-radius: 200px;
  border: 4px solid white;
}

footer section.bio p {
  text-align: left;
  margin-left: 2rem;
}

footer section.ituhippeily {
  background-color: #1a1919;
  color: white;
}

@media screen and (max-width: 600px) {
  footer section.bio img {
    width: 80px;
  }
  footer section.bio {
    align-items: flex-start;

    padding-left: 20px;
    padding-right: 20px;
  }
}

footer section.ituhippeily div {
  max-width: 600px;
  margin: 0 auto 0;
  display: flex;
  align-content: center;
  align-items: center;
  padding-top: 50px;
  padding-bottom: 50px;
}

footer section.ituhippeily a {
  display: inline-block;
  padding: 1rem;
  border: 1px solid white;
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  width: 120px;
}

footer section.ituhippeily a:active,
footer section.ituhippeily a:hover {
  background: white;
  color: black;
  transition: all 0.2s var(--easing-easeoutcirc);
}

@media screen and (max-width: 600px) {
  footer section.ituhippeily div {
    flex-direction: column;
  }
  footer section.ituhippeily p {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    margin-bottom: 2rem;
  }
}

